--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
 
 <div class="app">
   <header>
-    <img src="logo.svg" />
+    <img src="Verona AI Logo.png" />
     <h1>Verona AI</h1>
   </header>
 
